--- a/App/ClientApp/src/app/layout/schedule-management/history/history.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/history/history.component.html
@@ -1,7 +1,7 @@
 <div class="main-container position-relative">
   <div class="page-title d-flex justify-content-md-between justify-content-end">
     <div class="xs-title">
-      <span class="mr-2">SM 01 History</span>
+      <span class="mr-2">{{scheduleName}}</span>
       <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
     </div>
   </div>
@@ -52,7 +52,7 @@
             <th class="width10" mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
-                <button type="button" title="Download"><span class="fa fa-download"></span></button>
+                <button type="button" title="Download" (click)="DownloadAsset(element)"><span class="fa fa-download"></span></button>
                 <button type="button" title="Export PDF"><span class="fa fa-file-pdf-o"></span></button>
               </div>
             </td>
@@ -78,10 +78,6 @@
         <label class="m-0">Apply Filter</label>
       </div>
       <div class="filter-body-left d-flex flex-column stylescrollbar">
-        <div class="form-group">
-          <label>Name</label>
-          <input type="text" class="form-control" formControlName="filterDisplayName">
-        </div>
         <div class="form-group">
           <label>Statement Definition</label>
           <input type="text" class="form-control" formControlName="filterStatementDefiniton">
