all widgets binding is done in page and statement preview.

--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -31,7 +31,7 @@
                   'fa-image fa-lg' : widget.WidgetName == 'Image',
                   'icon-videoWidget' : widget.WidgetName == 'Video',
                   'icon-widget-single-column2 fa-lg' : widget.WidgetName == 'Summary',
-                  'fa fa-bell-o' : widget.WidgetName == 'ReminderAndRecommendation',
+                  'fa-bell-o' : widget.WidgetName == 'ReminderaAndRecommendation',
                   'icon-rp-loss1 fa-lg' : widget.WidgetName == 'InvestmentPortfolioRisk',
                   'icon-AnalyticsWidget' : widget.WidgetName == 'Analytics',
                   'icon-AvailableBalanceWidget' : widget.WidgetName == 'SavingAvailableBalance' || widget.WidgetName == 'CurrentAvailableBalance',
