--- a/App/ClientApp/src/app/layout/roles/view/view.component.html
+++ b/App/ClientApp/src/app/layout/roles/view/view.component.html
@@ -2,89 +2,118 @@
   <div class="page-title">
     <span class="xs-title"> Role Details</span>
   </div>
-    <div class="card border-0 mb-2 card-shadow">
-      <div class="card-header bg-white d-flex justify-content-between">
-        <div>
-          <label class="m-0">Details</label>
-        </div>
-        <div>
-          <button type="button" id="btnCollapsedDetails"
-                  class="toggle-btn border-0 p-0 bg-transparent"
-                  (click)="isCollapsedDetails = !isCollapsedDetails"
-                  [attr.aria-expanded]="!isCollapsedDetails"
-                  aria-controls="collapseDetails">
-            <span class="fa" [ngClass]="!isCollapsedDetails? 'fa-angle-down' : 'fa-angle-right'"></span>
-          </button>
+  <div class="card border-0 mb-2 card-shadow">
+    <div class="card-header bg-white d-flex justify-content-between">
+      <div>
+        <label class="m-0">Details</label>
+      </div>
+      <div>
+        <button type="button" id="btnCollapsedDetails"
+                class="toggle-btn border-0 p-0 bg-transparent"
+                (click)="isCollapsedDetails = !isCollapsedDetails"
+                [attr.aria-expanded]="!isCollapsedDetails"
+                aria-controls="collapseDetails">
+          <span class="fa" [ngClass]="!isCollapsedDetails? 'fa-angle-down' : 'fa-angle-right'"></span>
+        </button>
+      </div>
+    </div>
+    <div class="card-body" id="collapseDetails" [ngbCollapse]="isCollapsedDetails">
+      <div class="row form-group">
+        <div class="col-md-4 col-lg-3">
+          <label id="lblRoleName" for="inputRoleName">Name</label>
+          <div>{{roleRecord.Name}}</div>
         </div>
       </div>
-      <div class="card-body" id="collapseDetails" [ngbCollapse]="isCollapsedDetails">
-        <div class="row form-group">
-          <div class="col-md-4 col-lg-3">
-            <label id="lblRoleName" for="inputRoleName">Name</label>
-         <div>{{roleRecord.Name}}</div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-8 col-lg-6">
-            <label id="lblDescription">Description</label>
-            <div>{{roleRecord.Description}}</div>
-          </div>
+      <div class="row">
+        <div class="col-md-8 col-lg-6">
+          <label id="lblDescription">Description</label>
+          <div>{{roleRecord.Description}}</div>
         </div>
       </div>
     </div>
-    <div class="card border-0 mb-2 card-shadow">
-      <div class="card-header  bg-white d-flex justify-content-between">
-        <div>
-          <label class="m-0">Permissions</label>
-        </div>
-        <div>
-          <button type="button" id="btnCollapsedPermissions"
-                  class="toggle-btn border-0 p-0 bg-transparent"
-                  (click)="isCollapsedPermissions = !isCollapsedPermissions"
-                  [attr.aria-expanded]="!isCollapsedPermissions" aria-controls="collapsedPermissions">
-            <span class="fa" [ngClass]="!isCollapsedPermissions? 'fa-angle-down' : 'fa-angle-right'"></span>
-          </button>
-        </div>
+  </div>
+  <div class="card border-0 mb-2 card-shadow">
+    <div class="card-header  bg-white d-flex justify-content-between">
+      <div>
+        <label class="m-0">Permissions</label>
       </div>
-      <div class="card-body rtl-checkbox parent-rtl" id="collapsedPermissions" [ngbCollapse]="isCollapsedPermissions">
-        <!--repeat start-->
-        <div *ngIf="isRolePrivilegeIsAssigned">
-          <div class="card mb-2 card-shadow border-0" *ngFor="let role of rolePrivileges;trackBy: trackByFn">
-            <div class="card-header d-flex justify-content-between">
-              <div>
-                <label class="m-0">{{role.EntityName}}</label>
-              </div>
+      <div>
+        <button type="button" id="btnCollapsedPermissions"
+                class="toggle-btn border-0 p-0 bg-transparent"
+                (click)="isCollapsedPermissions = !isCollapsedPermissions"
+                [attr.aria-expanded]="!isCollapsedPermissions" aria-controls="collapsedPermissions">
+          <span class="fa" [ngClass]="!isCollapsedPermissions? 'fa-angle-down' : 'fa-angle-right'"></span>
+        </button>
+      </div>
+    </div>
+    <div class="card-body rtl-checkbox parent-rtl" id="collapsedPermissions" [ngbCollapse]="isCollapsedPermissions">
+      <!--repeat start-->
+      <div *ngIf="isRolePrivilegeIsAssigned">
+        <div class="card mb-2 card-shadow border-0" *ngFor="let role of rolePrivileges;trackBy: trackByFn">
+          <div class="card-header d-flex justify-content-between">
+            <div>
+              <label class="m-0">{{role.EntityName}}</label>
             </div>
-            <div class="card-body pt-2 pb-1 chk-container">
-              <div class="row">
-                <div class="col-sm-4 col-md-3 col-lg-3 col-6 form-group" *ngFor="let operation of role.Operation;trackBy: trackByFn">
-                  <div class="custom-control custom-checkbox">
-                    <input class="custom-control-input" type="checkbox" name="roleprivilege"
-                              id="{{operation.Name}}Roleprivilege{{trackByFn}}" [checked]="operation.IsEnabled" disabled />
-                      <label class="custom-control-label">{{operation.Name}}</label>
-                  </div>
+          </div>
+          <div class="card-body pt-2 pb-1 chk-container">
+            <div class="row">
+              <div class="col-sm-4 col-md-3 col-lg-3 col-6 form-group" *ngFor="let operation of role.Operation;trackBy: trackByFn">
+                <div class="custom-control custom-checkbox">
+                  <input class="custom-control-input" type="checkbox" name="roleprivilege"
+                         id="{{operation.Name}}Roleprivilege{{trackByFn}}" [checked]="operation.IsEnabled" disabled />
+                  <label class="custom-control-label">{{operation.Name}}</label>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div *ngIf="!isRolePrivilegeIsAssigned">
-          <div class="card mb-2 card-shadow border-0">
-            <div class="card-header d-flex justify-content-between">
-              <div>
-                <label class="m-0">No Permissions assigned to this role.</label>
-              </div>
+      </div>
+      <div *ngIf="!isRolePrivilegeIsAssigned">
+        <div class="card mb-2 card-shadow border-0">
+          <div class="card-header d-flex justify-content-between">
+            <div>
+              <label class="m-0">No Permissions assigned to this role.</label>
             </div>
           </div>
         </div>
-        <!--repeat end-->
+      </div>
+      <!--repeat end-->
+    </div>
+  </div>
+  <div class="card border-0 mb-2 card-shadow">
+    <div class="card-header bg-white d-flex justify-content-between">
+      <div>
+        <label class="m-0">Users</label>
+      </div>
+      <div>
+        <button type="button" id="btnCollapsedUsers"
+                class="toggle-btn border-0 p-0 bg-transparent"
+                (click)="getRoleUser()"
+                [attr.aria-expanded]="!isCollapsedUsers"
+                aria-controls="collapseUsers">
+          <span class="fa" [ngClass]="!isCollapsedUsers? 'fa-angle-down' : 'fa-angle-right'"></span>
+        </button>
       </div>
     </div>
-    <div class="card border-0 mt-4 mb-3 bg-transparent">
-      <div class="card-body p-0">
-        <button class="btn-footer-fill mr-2" id="btnSave" *ngIf="roleRecord.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' }))" (click)="navigateToRoleEdit()">Update</button>
-        <!-- <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete" (click)="deleteRole()">Delete</button> -->
-        <button class="btn-footer-outline" id="btnCancel" (click)="navigateToRoleList()">Cancel</button>
+    <div class="card-body" id="collapseUsers" [ngbCollapse]="isCollapsedUsers">
+      <div class="card mb-2 card-shadow border-0" *ngFor="let item of usersList">
+        <div class="card-header d-flex justify-content-between">
+          <div>
+            <label class="m-0">{{item.FirstName}} {{item.LastName}}</label>
+          </div>
+        </div>
+      </div>
+      <div *ngIf="usersList.length == 0 ">
+        No user found with this role.
       </div>
     </div>
+  </div>
+
+  <div class="card border-0 mt-4 mb-3 bg-transparent">
+    <div class="card-body p-0">
+      <button class="btn-footer-fill mr-2" id="btnSave" *ngIf="roleRecord.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Role',Operation: 'Edit' }))" (click)="navigateToRoleEdit()">Update</button>
+      <!-- <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete" (click)="deleteRole()">Delete</button> -->
+      <button class="btn-footer-outline" id="btnCancel" (click)="navigateToRoleList()">Cancel</button>
+    </div>
+  </div>
 </div>
