--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -182,7 +182,7 @@
           <div class="row" *ngIf="(isEmbedded && !isPersonalize)">
             <div class="col-sm-12 form-group">
               <label> URL </label> <span class="text-danger"> *</span>
-              <input type="text" class="form-control" formControlName="vdoUrl"/>
+              <input type="text" class="form-control" formControlName="vdoUrl" />
               <div class="validation-msg" style="color:red" *ngIf="vdoForm.vdoUrl.touched && vdoForm.vdoUrl.errors">
                 <ul style="list-style-type:none">
                   <li class="text-danger" *ngIf="vdoForm.vdoUrl.errors?.required">
@@ -248,6 +248,42 @@
       </div>
     </div>
   </form>
+  <!--top-4-->
+  <!--<table>
+    <thead>
+      <tr>
+        <td style="width:50%"></td>
+        <td style="width:15%">This Month</td>
+        <td style="width:35%;">Usually you spend</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td style="width:50%">
+          <label>Salary Transfer </label>
+        </td>
+        <td style="width:15%">
+          3454
+        </td>
+        <td style="width:35%;">
+          <span class="fa fa-sort-asc fa-2x mt-1 float-left" aria-hidden="true" style="position:relative;top:6px;color:limegreen"></span>
+          <span class="ml-2" style="position:relative;top:6px;">123</span>
+        </td>
+      </tr>
+      <tr>
+        <td style="width:50%">
+          <label>Salary Transfer </label>
+        </td>
+        <td style="width:15%">
+          3454
+        </td>
+        <td style="width:35%;">
+          <span style="color: red" class="fa fa-sort-desc fa-2x" aria-hidden="true"></span>
+          <span class="ml-2">123</span>
+        </td>
+      </tr>
+    </tbody>
+  </table>-->
 
 </div>
 
