Log Details Binding

--- a/App/ClientApp/src/app/layout/roles/view/view.component.html
+++ b/App/ClientApp/src/app/layout/roles/view/view.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
   <div class="page-title">
-    <span class="xs-title"> Role Details</span>
+    <span class="xs-title"> Role Details - {{roleRecord.Name}}</span>
   </div>
   <div class="card border-0 mb-2 card-shadow">
     <div class="card-header bg-white d-flex justify-content-between">
