--- a/App/ClientApp/src/app/layout/logs-details/logs-details.component.html
+++ b/App/ClientApp/src/app/layout/logs-details/logs-details.component.html
@@ -1,11 +1,11 @@
 <div class="main-container position-relative">
   <div class="page-title d-flex justify-content-md-between justify-content-end">
     <div class="xs-title">
-      <span class="mr-2">SM 01 Logs</span>
+      <span class="mr-2">{{scheduleName}} - {{scheduleLogIdentifier}}</span>
       <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
     </div>
     <div>
-      <button class="btn-add btn-cust">
+      <button class="btn-add btn-cust" (click)="reTryAllLog()" >
         <span class="fa fa-refresh btn-icon-cust btn-icon-fill"></span> Retry
       </button>
 
@@ -17,7 +17,7 @@
       <div class="d-flex justify-content-center mb-4">
         <div class="pagination-mat position-relative">
           <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
-                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage">
+                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)">
           </mat-paginator>
         </div>
       </div>
@@ -27,14 +27,14 @@
           <ng-container matColumnDef="UserID">
             <th class="width30" mat-header-cell *matHeaderCellDef mat-sort-header>
               <div class="custom-control custom-checkbox">
-                <input class="custom-control-input" type="checkbox" value="">
+                <input class="custom-control-input" type="checkbox" [checked]="isCheckAll" value="" (change)="IsCheckAll($event.target)">
                 <label class="custom-control-label">    User ID</label>
               </div>
             </th>
             <td mat-cell *matCellDef="let element">
               <div class="custom-control custom-checkbox">
-                <input class="custom-control-input" type="checkbox" value="">
-                <label class="custom-control-label">   {{element.UserID}}</label>
+                <input class="custom-control-input" type="checkbox" [checked]="element.IsChecked" value="" (change)="IsCheckItem($event.target,element)">
+                <label class="custom-control-label">   {{element.CustomerId}}</label>
               </div>
             </td>
           </ng-container>
@@ -42,23 +42,24 @@
           <ng-container matColumnDef="status">
             <th class="width30" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
             <td mat-cell *matCellDef="let element">
-              <span class="badge badge-success p-1" *ngIf="element.status=='Completed'">{{element.status}}</span>
-              <span class="badge badge-danger p-1" *ngIf="element.status=='Failed'">{{element.status}}</span>
-              <span class="badge badge-warning p-1 text-white" *ngIf="element.status=='In Progress'">{{element.status}}</span>
+              <span class="badge badge-success p-1" *ngIf="element.Status=='Completed'">{{element.Status}}</span>
+              <span class="badge badge-danger p-1" *ngIf="element.Status=='Failed'">{{element.Status}}</span>
+              <span class="badge badge-warning p-1 text-white" *ngIf="element.Status=='In Progress'">{{element.Status}}</span>
             </td>
           </ng-container>
 
           <ng-container matColumnDef="date">
             <th class="width30" mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-            <td mat-cell *matCellDef="let element">{{element.date}} </td>
+            <td mat-cell *matCellDef="let element">{{element.CreateDate  | date : "dd/MM/yyyy" }} </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th class="width10" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+            <th class="width10" mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
+                <button type="button" title="View" id="btnDelete" (click)="viewLodMessage(element)"><span class="fa fa-file-text-o"></span></button>
                 <button type="button" title="Export" id="btnDelete"><span class="fa fa-download"></span></button>
-                <button type="button" title="Retry" id="btnUpdate" *ngIf="element.status=='Failed'"><span class="fa fa-refresh"></span></button>
+                <button type="button" title="Retry" id="btnUpdate" *ngIf="element.Status=='Failed'" (click)="reTryLog(element)" ><span class="fa fa-refresh"></span></button>
               </div>
             </td>
           </ng-container>
@@ -76,47 +77,51 @@
       <button class="btn-footer-outline" id="btnCancel" (click)="navigateToListPage()">Cancel</button>
     </div>
   </div>
-  <div class="filter-popup" [ngClass]="!isFilter? 'filter-popup':'filter-popup-show'">
-    <div class="filter-head">
-      <label class="m-0">Apply Filter</label>
-    </div>
-    <div class="filter-body-left d-flex flex-column stylescrollbar">
-      <div class="form-group">
-        <label>User Id</label>
-        <input type="text" class="form-control">
+  <form [formGroup]="ScheduleLogFilterForm">
+    <div class="filter-popup" [ngClass]="!isFilter? 'filter-popup':'filter-popup-show'">
+      <div class="filter-head">
+        <label class="m-0">Apply Filter</label>
       </div>
-      <div class="form-group">
-        <label>Status</label>
-        <select class="form-control">
-          <option selected>Select</option>
-          <option>Option 01</option>
-          <option>Option 02</option>
-          <option>Option 03</option>
-          <option>Option 04</option>
-        </select>
+      <div class="filter-body-left d-flex flex-column stylescrollbar">
+        <div class="form-group">
+          <label>User Id</label>
+          <input type="text" class="form-control" formControlName="filterUserId">
+        </div>
+        <div class="form-group">
+          <label>Status</label>
+          <select class="form-control" formControlName="filterStatus" id="filterStatus">
+            <option value="0" selected> Select</option>
+            <option value="Failed">Failed</option>
+            <option value="Completed">Completed</option>
+            <option value="In Progress">In Progress</option>
+
+
+          </select>
+        </div>
+      </div>
+      <!--[ngClass]="filterClass"-->
+      <div class="filter-footer">
+        <ul class="nav">
+          <li class="nav-item width33" title="Search" (click)="searchScheduleLogRecordFilter('search')">
+            <a class="nav-link p-0">
+              <span class="fa fa-check"></span>
+            </a>
+          </li>
+          <li class="nav-item width33" title="Reset" (click)="searchScheduleLogRecordFilter('reset')">
+            <a class="nav-link p-0">
+              <span class="fa fa-refresh"></span>
+            </a>
+          </li>
+          <li class="nav-item width33" title="Close" (click)="closeFilter()">
+            <a class="nav-link p-0">
+              <span class="fa fa-close"></span>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
-    <!--[ngClass]="filterClass"-->
-    <div class="filter-footer">
-      <ul class="nav">
-        <li class="nav-item width33" title="Search">
-          <a class="nav-link p-0">
-            <span class="fa fa-check"></span>
-          </a>
-        </li>
-        <li class="nav-item width33" title="Reset">
-          <a class="nav-link p-0">
-            <span class="fa fa-refresh"></span>
-          </a>
-        </li>
-        <li class="nav-item width33" title="Close" (click)="closeFilter()">
-          <a class="nav-link p-0">
-            <span class="fa fa-close"></span>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
+  </form>
+
 </div>
 
 <div class="overlay" [ngClass]="!isFilter? 'hide':'show'"></div>
