--- a/App/ClientApp/src/app/layout/roles/add/add.component.html
+++ b/App/ClientApp/src/app/layout/roles/add/add.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
   <div class="page-title">
     <span class="xs-title" *ngIf="roleEditModeOn == false">Add Role</span>
-    <span class="xs-title" *ngIf="roleEditModeOn == true">Edit Role</span>
+    <span class="xs-title" *ngIf="roleEditModeOn == true">Edit Role - {{Name}}</span>
   </div>
 
   <form [formGroup]="roleFormGroup" name="roleForm">
