--- a/App/ClientApp/src/app/layout/logs-details/logs-details.component.html
+++ b/App/ClientApp/src/app/layout/logs-details/logs-details.component.html
@@ -1,12 +1,12 @@
 <div class="main-container position-relative">
   <div class="page-title d-flex justify-content-md-between justify-content-end">
     <div class="xs-title">
-      <span class="mr-2">{{scheduleName}} - {{scheduleLogIdentifier}}</span>
+      <span class="mr-2">{{scheduleName}} - {{executionDate  | date : "dd/MM/yyyy" }}</span>
       <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
     </div>
     <div>
-      <button class="btn-add btn-cust" (click)="reTryAllLog()" >
-        <span class="fa fa-refresh btn-icon-cust btn-icon-fill"></span> Retry
+      <button class="btn-add btn-cust" (click)="reTryAllLog()">
+        <span class="fa fa-repeat btn-icon-cust btn-icon-fill"></span> Retry
       </button>
 
     </div>
@@ -25,22 +25,32 @@
         <table mat-table [dataSource]="dataSource" matSort class="table-cust">
           <!-- Position Column -->
           <ng-container matColumnDef="UserID">
-            <th class="width30" mat-header-cell *matHeaderCellDef mat-sort-header>
+            <th class="width25" mat-header-cell *matHeaderCellDef mat-sort-header>
               <div class="custom-control custom-checkbox">
                 <input class="custom-control-input" type="checkbox" [checked]="isCheckAll" value="" (change)="IsCheckAll($event.target)">
-                <label class="custom-control-label">    User ID</label>
+                <label class="custom-control-label">Customer</label>
               </div>
             </th>
             <td mat-cell *matCellDef="let element">
               <div class="custom-control custom-checkbox">
                 <input class="custom-control-input" type="checkbox" [checked]="element.IsChecked" value="" (change)="IsCheckItem($event.target,element)">
-                <label class="custom-control-label">   {{element.CustomerId}}</label>
+                <label class="custom-control-label">   {{element.CustomerName}}</label>
               </div>
             </td>
           </ng-container>
 
+          <ng-container matColumnDef="renderEngineName">
+            <th class="width25" mat-header-cell *matHeaderCellDef mat-sort-header> Render Engine Name </th>
+            <td mat-cell *matCellDef="let element">{{element.RenderEngineName}}</td>
+          </ng-container>
+
+          <!--<ng-container matColumnDef="renderEngineUrl">
+            <th class="width30" mat-header-cell *matHeaderCellDef mat-sort-header> Render Engine Url </th>
+            <td mat-cell *matCellDef="let element">{{element.RenderEngineURL}}</td>
+          </ng-container>-->
+
           <ng-container matColumnDef="status">
-            <th class="width30" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+            <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
             <td mat-cell *matCellDef="let element">
               <span class="badge badge-success p-1" *ngIf="element.Status=='Completed'">{{element.Status}}</span>
               <span class="badge badge-danger p-1" *ngIf="element.Status=='Failed'">{{element.Status}}</span>
@@ -49,8 +59,8 @@
           </ng-container>
 
           <ng-container matColumnDef="date">
-            <th class="width30" mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-            <td mat-cell *matCellDef="let element">{{element.CreateDate  | date : "dd/MM/yyyy" }} </td>
+            <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Last Execution Date </th>
+            <td mat-cell *matCellDef="let element">{{element.CreateDate  | date : "dd/MM/yyyy  h:mm a" }} </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
@@ -58,8 +68,8 @@
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
                 <button type="button" title="View" id="btnDelete" (click)="viewLodMessage(element)"><span class="fa fa-file-text-o"></span></button>
-                <button type="button" title="Export" id="btnDelete"><span class="fa fa-download"></span></button>
-                <button type="button" title="Retry" id="btnUpdate" *ngIf="element.Status=='Failed'" (click)="reTryLog(element)" ><span class="fa fa-refresh"></span></button>
+                <!--<button type="button" title="Export" id="btnDelete"><span class="fa fa-download"></span></button>-->
+                <button type="button" title="Retry" id="btnUpdate" *ngIf="element.Status=='Failed'" (click)="reTryLog(element)"><span class="fa fa-repeat"></span></button>
               </div>
             </td>
           </ng-container>
