--- a/App/ClientApp/src/app/layout/schedule-management/history/history.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/history/history.component.html
@@ -52,7 +52,7 @@
             <th class="width10" mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
-                <button type="button" title="Download" ><span class="fa fa-download"></span></button>
+                <button type="button" title="Download" (click)="download(element.StatementFilePath)"><span class="fa fa-download"></span></button>
                 <button type="button" title="Export PDF"><span class="fa fa-file-pdf-o"></span></button>
               </div>
             </td>
