--- a/App/ClientApp/src/app/layout/statement-search/statement-search.component.html
+++ b/App/ClientApp/src/app/layout/statement-search/statement-search.component.html
@@ -11,49 +11,44 @@
       <div class="d-flex justify-content-center mb-4">
         <div class="pagination-mat position-relative">
           <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
-                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage">
+                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)">
           </mat-paginator>
         </div>
       </div>
       <div class="widget-area-grid padding-0">
-        <table mat-table [dataSource]="dataSource" matSort class="table-cust">
+        <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
 
           <!-- Position Column -->
           <ng-container matColumnDef="id">
-            <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-            <td mat-cell *matCellDef="let element">{{element.id}}</td>
+            <th class="width10" mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <td mat-cell *matCellDef="let element">{{element.Identifier}}</td>
           </ng-container>
 
           <!-- Name Column -->
           <ng-container matColumnDef="date">
             <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.StatementDate  | date:"dd/MM/yyyy"}} </td>
           </ng-container>
 
           <!-- Weight Column -->
           <ng-container matColumnDef="period">
             <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Period </th>
-            <td mat-cell *matCellDef="let element"> {{element.period}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.StatementPeriod}} </td>
           </ng-container>
 
           <!-- Symbol Column -->
           <ng-container matColumnDef="customer">
             <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> Customer </th>
-            <td mat-cell *matCellDef="let element"> {{element.customer}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.CustomerName}} </td>
           </ng-container>
 
           <ng-container matColumnDef="accountId">
             <th class="width10" mat-header-cell *matHeaderCellDef mat-sort-header> Account ID </th>
-            <td mat-cell *matCellDef="let element"> {{element.accountId}} </td>
-          </ng-container>
-
-          <ng-container matColumnDef="city">
-            <th class="width10" mat-header-cell *matHeaderCellDef mat-sort-header>City </th>
-            <td mat-cell *matCellDef="let element"> {{element.city}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.AccountNumber}} </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th class="width10" mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+            <th class="width10" mat-header-cell *matHeaderCellDef> Action </th>
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
                 <button type="button" title="Export PDF"><span class="fa fa-file-pdf-o"></span></button>
